MGS-1138 - show search box on mobile. fix margin

--- a/resources/scss/components/_component.search-box.scss
+++ b/resources/scss/components/_component.search-box.scss
@@ -9,6 +9,8 @@ $search-box__transition-timing: ease;
 .search-box {
   position: relative;
   width: 100%;
+  height: $search-box__box-size;
+  margin: 35px 0 49px 0;
 
   &__input[type=text] {
     border-right: 0;
@@ -68,6 +70,7 @@ $search-box__transition-timing: ease;
 
 @include media-query(tablet) {
   .search-box {
+
     &__input {
       @include transition(width $transition-in-time);
 
