--- a/resources/scss/components/_component.welcome.scss
+++ b/resources/scss/components/_component.welcome.scss
@@ -10,7 +10,7 @@
   }
 
   &__search {
-    width: 70%;
+    width: 100%;
   }
 
   &__links {
@@ -26,6 +26,10 @@
       @include non-contextual-link;
     }
 
+  .search-box {
+    height: auto;
+    margin: auto;
+  }
 }
 
 
@@ -36,6 +40,10 @@
       font-weight: 300;
       font-size: 20px;
       line-height: 32px;
+    }
+
+    &__search {
+      width: 70%;
     }
   }
 
